tests/ui/nll/type-check-pointer-coercions.stderr
error: lifetime may not live long enough
  --> $DIR/type-check-pointer-coercions.rs:2:5
   |
LL | fn shared_to_const<'a, 'b>(x: &&'a i32) -> *const &'b i32 {
   |                    --  -- lifetime `'b` defined here
   |                    |
   |                    lifetime `'a` defined here
LL |     x
   |     ^ function was supposed to return data with lifetime `'b` but it is returning data with lifetime `'a`
   |
   = help: consider adding the following bound: `'a: 'b`

error: lifetime may not live long enough
  --> $DIR/type-check-pointer-coercions.rs:6:5
   |
LL | fn unique_to_const<'a, 'b>(x: &mut &'a i32) -> *const &'b i32 {
   |                    --  -- lifetime `'b` defined here
   |                    |
   |                    lifetime `'a` defined here
LL |     x
   |     ^ function was supposed to return data with lifetime `'b` but it is returning data with lifetime `'a`
   |
   = help: consider adding the following bound: `'a: 'b`

error: lifetime may not live long enough
  --> $DIR/type-check-pointer-coercions.rs:11:5
   |
LL | fn unique_to_mut<'a, 'b>(x: &mut &'a i32) -> *mut &'b i32 {
   |                  --  -- lifetime `'b` defined here
   |                  |
   |                  lifetime `'a` defined here
LL |     // Two errors because *mut is invariant
LL |     x
   |     ^ function was supposed to return data with lifetime `'a` but it is returning data with lifetime `'b`
   |
   = help: consider adding the following bound: `'b: 'a`
   = note: requirement occurs because of a mutable pointer to `&i32`
   = note: mutable pointers are invariant over their type parameter
   = help: see <https://doc.rust-lang.org/nomicon/subtyping.html> for more information about variance

error: lifetime may not live long enough
  --> $DIR/type-check-pointer-coercions.rs:11:5
   |
LL | fn unique_to_mut<'a, 'b>(x: &mut &'a i32) -> *mut &'b i32 {
   |                  --  -- lifetime `'b` defined here
   |                  |
   |                  lifetime `'a` defined here
LL |     // Two errors because *mut is invariant
LL |     x
   |     ^ function was supposed to return data with lifetime `'b` but it is returning data with lifetime `'a`
   |
   = help: consider adding the following bound: `'a: 'b`
   = note: requirement occurs because of a mutable pointer to `&i32`
   = note: mutable pointers are invariant over their type parameter
   = help: see <https://doc.rust-lang.org/nomicon/subtyping.html> for more information about variance

help: `'b` and `'a` must be the same: replace one with the other

error: lifetime may not live long enough
  --> $DIR/type-check-pointer-coercions.rs:16:5
   |
LL | fn mut_to_const<'a, 'b>(x: *mut &'a i32) -> *const &'b i32 {
   |                 --  -- lifetime `'b` defined here
   |                 |
   |                 lifetime `'a` defined here
LL |     x
   |     ^ function was supposed to return data with lifetime `'b` but it is returning data with lifetime `'a`
   |
   = help: consider adding the following bound: `'a: 'b`

error: lifetime may not live long enough
  --> $DIR/type-check-pointer-coercions.rs:22:5
   |
LL | fn array_elem<'a, 'b>(x: &'a i32) -> *const &'b i32 {
   |               --  -- lifetime `'b` defined here
   |               |
   |               lifetime `'a` defined here
...
LL |     y
   |     ^ function was supposed to return data with lifetime `'b` but it is returning data with lifetime `'a`
   |
   = help: consider adding the following bound: `'a: 'b`

error: lifetime may not live long enough
  --> $DIR/type-check-pointer-coercions.rs:28:5
   |
LL | fn array_coerce<'a, 'b>(x: &'a i32) -> *const [&'b i32; 3] {
   |                 --  -- lifetime `'b` defined here
   |                 |
   |                 lifetime `'a` defined here
...
LL |     y
   |     ^ function was supposed to return data with lifetime `'b` but it is returning data with lifetime `'a`
   |
   = help: consider adding the following bound: `'a: 'b`

error: lifetime may not live long enough
  --> $DIR/type-check-pointer-coercions.rs:34:5
   |
LL | fn nested_array<'a, 'b>(x: &'a i32) -> *const [&'b i32; 2] {
   |                 --  -- lifetime `'b` defined here
   |                 |
   |                 lifetime `'a` defined here
...
LL |     y
   |     ^ function was supposed to return data with lifetime `'b` but it is returning data with lifetime `'a`
   |
   = help: consider adding the following bound: `'a: 'b`

error: aborting due to 8 previous errors

